# MockMate-Hire

./: .gitignore  README.md
.github/workflows/: ci.yml
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css
Frontend/src/api/: axios.js  queryClient.js
Frontend/src/config/: clerk.js
Frontend/src/context/: ToastContext.jsx
Frontend/src/hooks/: useCurrentUser.js  useInterviewTimer.js  useMediaPermissions.js  useToast.js
Frontend/src/layouts/: AuthLayout.jsx  CandidateLayout.jsx  ClerkRootLayout.jsx  DashboardLayout.jsx  DashboardSidebar.jsx
Frontend/src/pages/: LandingPage.jsx  NotFoundPage.jsx
Frontend/src/routes/: AuthRedirect.jsx  LazyPage.jsx  ProtectedRoute.jsx  index.jsx  lazyPages.js
Frontend/src/services/: mockData.js
Frontend/src/styles/: tokens.css
Frontend/src/utils/: authRole.js  scoreUtils.js
backend/: MockMate.db  main.py  requirements.txt
backend/app/agents/: agent.py  graph.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  answer.py  interview.py  question.py  recording.py  report.py  resume.py  session.py  user.py
backend/app/schemas/: candidate.py  interview.py  livekit.py  report.py  resume.py  user.py
backend/app/services/: analysis_service.py  auth_service.py  candidate_service.py  evaluation_service.py  interview_service.py  livekit_service.py  resume_service.py
backend/livekit-agent/: pyproject.toml
backend/livekit-agent/chroma_store/: chroma.sqlite3
backend/migrations/: 0001_initial.sql
(+57 files in other folders)
