[project]
name = "livekit-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "livekit-agents[cartesia,deepgram,hedra,images,openai,silero,turn-detector]~=1.5",
    "livekit-plugins-langchain~=1.1",
    "livekit-plugins-noise-cancellation~=0.2",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
]
